--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,11 +5,7 @@
   
 	<div class="field">
     <%= f.label :username %><br />
-<<<<<<< HEAD
-    <%= f.text_field :username, autofocus: true, autocomplete: "email" %>
-=======
-    <%= f.text_field :username, autofocus: true %>
->>>>>>> a9546bd (artek_discuss)
+    <%= f.text_field :username %>
   </div>
   
 	<div class="field">
